--- a/app/views/bookings/_incoming_request_item.html.erb
+++ b/app/views/bookings/_incoming_request_item.html.erb
@@ -11,7 +11,7 @@
             <p>
                 <%= booking.ad.summary %>
             </p>
-            <p><%= booking.updated_at.to_formatted_s(:plendit_short_datetime) %> STATUS: <b><%= booking.status %></b></p>
+            <p><%= l booking.updated_at %> STATUS: <b><%= booking.status %></b></p>
         </div>
     </div>
 </div>
