--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -22,10 +22,10 @@
                     </span>
                 <% end %>
                 <%= image_tag 'notification.svg', class: 'top-bar__notification-logo' %></a>
-            <%= link_to users_path, :class => "top-bar__navbar-link" do %>
-                <span class="top-bar__navbar-section top-bar__me-label">Min side</span>
-                <%= avatar_image current_user, :tiny, class: 'top-bar__avatar' %>
-            <% end %>
+            <%= link_to users_path, :class => "top-bar__navbar-link" do -%>
+                <span class="top-bar__navbar-section top-bar__me-label">Min side</span> <%- -%>
+                <%= avatar_image current_user, :tiny, class: 'top-bar__avatar' -%>
+            <%- end -%>
         <%- else -%>
             <%= link_to t(:sign_up), new_user_registration_path, class: 'top-bar__navbar-link' %> |
             <%= link_to t(:log_in), new_user_session_path, class: 'top-bar__navbar-link' %>
