--- a/app/views/users/edit_user_payment_account.html.erb
+++ b/app/views/users/edit_user_payment_account.html.erb
@@ -1,3 +1,4 @@
+<div class="eight columns">
 <%= render layout: "gray_box", locals: {title: "Kontonummer", id: "kontonummer"} do %>
 
   <%- if payment_account_notice -%>
@@ -32,5 +33,5 @@
         </div>
     </div>
   <% end %>
-
 <% end %>
+</div>
