Hashtag text update

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -26,7 +26,7 @@
         <div class="u-push-down-only">
             <%= f.label :body, 'Beskrivelse:' %>
             <%= f.text_area :body, class: 'u-full-width in-form__description', data: { controller: 'autoSizeTextArea' } %>
-            <small>Visste du: Du kan bruke #hashtags i annonsen din. Det gjør det enklere å finne den i søket.</small>
+            <small>Tips: Du kan bruke #hashtags i annonsen din. Det gjør det enklere for andre å finne den i søket.</small>
         </div>
 
         <% if @ad.category == 'motor' %>
