Added utility for showing things only when there is a grid

--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -428,7 +428,11 @@ details.u-implode-summary[open] > summary {
   }
 }
 
-
+@media (max-width: $mobile) {
+  .u-only-when-grid {
+    display: none;
+  }
+}
 
 
 /* Misc
