--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -4,6 +4,14 @@
             <button data-show-list-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--left search-result-view-chooser__segment-button--selected">Vis treff</button>
             <button data-show-map-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--right">Vis kart</button>
         </div>
+        <h4 data-controller="hitCount" class="search-title-box">
+            Treff
+            <%= ((@ads.current_page - 1) * @ads.default_per_page) + 1 %>
+            -
+            <%= [@ads.current_page * @ads.default_per_page, @ads.total_count].min %>
+            av
+            <%= @ads.total_count %></h4>
+
     </div>
 </div>
 
@@ -15,7 +23,7 @@
     </div>
 
     <div class="result-container__hits-box" data-hits-view>
-        <div class="search-title-box">
+        <div class="search-title-box u-only-when-grid">
             <h4 data-controller="hitCount">
                 Treff
                 <%= ((@ads.current_page - 1) * @ads.default_per_page) + 1 %>
