--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -4,14 +4,7 @@
             <button data-show-list-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--left search-result-view-chooser__segment-button--selected">Vis treff</button>
             <button data-show-map-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--right">Vis kart</button>
         </div>
-        <h4 data-controller="hitCount" class="search-title-box">
-            Treff
-            <%= ((@ads.current_page - 1) * @ads.default_per_page) + 1 %>
-            -
-            <%= [@ads.current_page * @ads.default_per_page, @ads.total_count].min %>
-            av
-            <%= @ads.total_count %></h4>
-
+        <%= render partial: "search_title_box" %>
     </div>
 </div>
 
@@ -23,14 +16,8 @@
     </div>
 
     <div class="result-container__hits-box" data-hits-view>
-        <div class="search-title-box u-only-when-grid">
-            <h4 data-controller="hitCount">
-                Treff
-                <%= ((@ads.current_page - 1) * @ads.default_per_page) + 1 %>
-                -
-                <%= [@ads.current_page * @ads.default_per_page, @ads.total_count].min %>
-                av
-                <%= @ads.total_count %></h4>
+        <div class="u-only-when-grid">
+            <%= render partial: "search_title_box" %>
         </div>
         <%= render partial: "search_filter_section" %>
         <div class="result-container__hits-list" data-controller="resultList resultPaging" data-result-list>
