fix icon/description for booking index page

--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -11,7 +11,7 @@
                         #{ text: 'Siste nytt',    icon: 'question-circle', path: users_path, },
                         { text: 'Profil',        icon: 'user',            path: private_profile_users_path },
                         { text: 'Annonser',      icon: 'file-text-o ',    path: users_ads_path },
-                        { text: 'Forespørsler',  icon: 'question-circle', path: bookings_path },
+                        { text: 'Aktiviteter',   icon: 'comments',        path: bookings_path },
                         { text: 'Favoritter',    icon: 'heart',           path: users_favorite_ads_path },
                         { text: 'Leiehistorikk', icon: 'history',         path: rental_history_users_path }
                     ]
