--- a/app/views/users/payment/_payout_wallet_balance.html.erb
+++ b/app/views/users/payment/_payout_wallet_balance.html.erb
@@ -6,5 +6,5 @@
   Din Plendit-saldo: <b>xyz,-</b> NOK
 
   <br>
-  Overfør penger til din konto
+  <%= link_to 'Overfør penger til din konto', new_payout_users_path %>
 <% end %>
