Requests are now activities, remove unused partials/controller method/view/general housekeeping.

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,9 +1,9 @@
-<%= render partial: "shared/personal_bar", locals: { selected: "Forespørsler" } %>
+<%= render partial: "shared/personal_bar", locals: { selected: "Aktiviteter" } %>
 
 <div class="container">
     <div class="row">
         <div class="nine columns">
-            <%= render layout: "gray_box", locals: {title: "Forespørsler"} do %>
+            <%= render layout: "gray_box", locals: {title: "Aktiviteter"} do %>
                 Under ser du nye forespørsler. Om du ser etter din historikk
                 finner du denne ved å <a href="#">klikke her.</a>
             <% end %>
@@ -11,11 +11,6 @@
             <section class="u-push-down">
                 <%= render partial: "incoming_request_item", collection: @bookings, as: 'booking' %>
             </section>
-
-        </div>
-        <div class="three columns">
-            <%= render partial: "shared/sent_requests_sidebar_box" %>
-            <%= render partial: "shared/received_requests_sidebar_box" %>
         </div>
     </div>
 </div>
