--- a/app/views/application/_gray_box.html.erb
+++ b/app/views/application/_gray_box.html.erb
@@ -1,5 +1,7 @@
-<div class="gray-box u-push-down" <%= defined?(id).nil? ? "" : "id=#{id}" %> >
-    <h5 class="gray-box__title"><%= title %></h5>
+<div class="gray-box u-push-down" <%= defined?(id).nil? ? '' : "id=#{id}" %> >
+    <% if defined? title %>
+        <h5 class="gray-box__title"><%= title %></h5>
+    <% end %>
     <div class="gray-box__body">
         <%= yield %>
     </div>
