--- a/app/views/users/private_profile.html.erb
+++ b/app/views/users/private_profile.html.erb
@@ -5,7 +5,7 @@
         <div class="eight columns">
             <h1>Din profil</h1>
 
-            <%= render layout: "gray_box", locals: {title: ''} do %>
+            <%= render layout: "gray_box" do %>
                 <div class="biz-card">
                     <div class="biz-card__avatar">
                         <%= avatar_image current_user, :huge %>
