--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -13,7 +13,7 @@
                         { text: 'Annonser',      icon: 'file-text-o ',    path: users_ads_path },
                         { text: 'Aktiviteter',   icon: 'comments',        path: bookings_path },
                         { text: 'Favoritter',    icon: 'heart',           path: users_favorite_ads_path },
-                        { text: 'Leiehistorikk', icon: 'history',         path: rental_history_users_path }
+                        { text: 'Leiehistorikk', icon: 'history',         path: rental_history_users_path },
                     ]
 
                     unless Plendit::Application.config.x.application_mode.beta
