html escape strings when showing an ad

--- a/app/views/ads/_ad_copy_section.html.erb
+++ b/app/views/ads/_ad_copy_section.html.erb
@@ -1,6 +1,6 @@
 <section class="ad-copy-section">
     <h4>Annonseinfo</h4>
     <div class="ad-copy-section__body">
-        <%= simple_format ad.body %>
+        <%= simple_format h(ad.body) %>
     </div>
 </section>
