--- a/app/views/shared/_ad_title_box.html.erb
+++ b/app/views/shared/_ad_title_box.html.erb
@@ -1,5 +1,5 @@
 <div class="ad-title-box">
-    <h1 class="ad-title-box__title"><%= ad.display_title %></h1>
+    <h1 class="ad-title-box__title"><%=h ad.display_title %></h1>
 
 
     <div class="ad-title-box__user-box">
