--- a/app/views/financial_transactions/_financial_transaction.html.erb
+++ b/app/views/financial_transactions/_financial_transaction.html.erb
@@ -17,7 +17,7 @@
     <% else %>
         <%= icon 'sign-out', class: "fa-lg" %>
     <% end %>
-    <%= financial_transaction.id -%>
+    <small><%= financial_transaction.id %></small>
   </td>
   <td>
     <%= format_monetary_full financial_transaction.amount %>
