--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -17,6 +17,7 @@
         <div class="eight columns">
             <%= render partial: "shared/ad_title_box", locals: { ad: @ad } %>
             <%= render partial: "ad_copy_section", locals: { ad: @ad } %>
+            <%= render partial: "ad_payin_rules",      locals: { ad: @ad } %>
             <%= render partial: "ad_gallery_mosaic", locals: { ad: @ad } %>
             <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
         </div>
