comment out sections that are not going to be present in the inial release of plendit

--- a/app/views/shared/_profile_quality_box.html.erb
+++ b/app/views/shared/_profile_quality_box.html.erb
@@ -1,5 +1,6 @@
 <div class="profile-quality-box">
 
+<!-- <%# These are not present in the initial release of plendit: %>
     <table class="profile-quality-box__table">
         <tr class="profile-quality-box__row">
             <th class="profile-quality-box__th">
@@ -29,6 +30,7 @@
             </td>
         </tr>
     </table>
+ -->
 
     <div>
         <ol class="profile-quality-box__verifications-list">
