--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -126,6 +126,15 @@
         <hr>
 
         <div class="u-push-down">
+            <div class="main-price">
+                <%= f.fields_for :payin_rules, :main_payin_rule do |mf| %>
+                    <%= mf.label :payin_amount_in_h, "Pris per dag:" %>
+                    <%= mf.number_field :payin_amount_in_h %>
+                <% end %>
+            </div>
+        </div>
+
+        <div class="u-push-down">
             <%= render partial: 'price_editor', locals: {f: f} %>
         </div>
 
