--- a/app/views/ads/_price_editor.html.erb
+++ b/app/views/ads/_price_editor.html.erb
@@ -1,25 +1,23 @@
 <div class="price-editor" data-controller="priceEstimateUpdater payinRulesSyncer" data-estimates-url="<%= payout_estimates_ad_path @ad %>">
     <%= f.nested_fields_for :payin_rules, @ad.payin_rules.effective_from_asc do |ff| %>
-        <div data-payin-rule>
-            <div class="price-editor__row">
-                <% if ff.object.required? %>
-                    <label class="price-editor__label">Pris per døgn:</label> <%= ff.text_field :payin_amount_in_h, size: 8, class: 'price-editor__price-input', data: { price: '' } %>
-                <% else %>
-                    Ved utleie over 
-                    <%= ff.hidden_field :unit, value: 'day'  %>
-                    <%= ff.text_field :effective_from, size: 3 %>
-                    dager, reduseres pris per døgn til:
-                    <%= ff.text_field :payin_amount_in_h, size: 8, class: 'price-editor__price-input', data: { price: '' } %>
-                    <%= ff.remove_nested_fields_link 'Slett', class: 'u-pull-right' %>
-                <% end %>
+        <% unless ff.object.required? %>
+            <div data-payin-rule>
+                <div class="price-editor__row">
+                        Ved utleie over 
+                        <%= ff.hidden_field :unit, value: 'day'  %>
+                        <%= ff.text_field :effective_from, size: 3 %>
+                        dager, reduseres pris per døgn til:
+                        <%= ff.text_field :payin_amount_in_h, size: 8, class: 'price-editor__price-input', data: { price: '' } %>
+                        <%= ff.remove_nested_fields_link 'Slett', class: 'u-pull-right' %>
+                </div>
+                <div data-estimate-holder>
+                    <%= render partial: 'price_input_estimate', locals: { rule: ff.object } %>
+                </div>
             </div>
-            <div data-estimate-holder>
-                <%= render partial: 'price_input_estimate', locals: { rule: ff.object } %>
-            </div>
-        </div>
+        <% end %>
     <% end %>
     <hr class="price-editor__ruler">
     <%= f.add_nested_fields_link :payin_rules do %>
-        <%= icon 'plus', class: 'fa-lg' %> Legg til prisalternativ for dager.
+        <span class="button">Legg til prisalternativ for dager</span>
     <% end %>
 </div>
