Hooked some new logic to show details about main price

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -132,6 +132,9 @@
                     <%= mf.number_field :payin_amount_in_h %>
                 <% end %>
             </div>
+            <div data-controller="updateMainPriceDetails">
+
+            </div>
         </div>
 
         <div class="u-push-down">
