--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -140,7 +140,7 @@
                 </div>
 
                 <div>
-                    <i>Inkluderer forsikring opp til</span>
+                    <i>Inkluderer forsikring opp til</i>
                     <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %></i>
                 </div>
 
