Renamed the yellow box, as it's used for more than privacy now

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -259,7 +259,7 @@
     padding: $standard-spacing;
 }
 
-.privacy-box {
+.help-box {
     margin-top: $standard-spacing * 2;
     padding: $standard-spacing;
     background-color: $color-privacy-yellow;
