--- a/app/assets/stylesheets/ads.scss
+++ b/app/assets/stylesheets/ads.scss
@@ -160,3 +160,21 @@
     }
 }
 
+.price-adder {
+    &__label {
+        display: inline-block;
+        width: 172px;
+    }
+
+    &__days {
+        width: 60px;
+        text-align: right;
+    }
+
+    &__price {
+        width: 80px;
+        text-align: right;
+
+    }
+}
+
